Public Url of netlify

--- a/package.json
+++ b/package.json
@@ -44,5 +44,5 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://phj9020.github.io/nomflix"
+  "homepage": "https://competent-shockley-70cba6.netlify.app"
 }
